--- a/less/navbar.less
+++ b/less/navbar.less
@@ -284,7 +284,7 @@
 
   .navbar-brand {
     float: left;
-    margin-left: -5px;
+    margin-left: -15px;
     margin-right: 5px;
   }
   .navbar-nav {
